<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:divider="?android:dividerVertical"
            android:text="@string/whoReceive" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/whereToSave" />
    </TableRow>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonSelectTheRecipientToSend"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:maxLines="2"
                    android:text="@string/selectContactToSend"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/editTextSelectTheRecipientToSend"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:hint="@string/selectContactToSend"
                    android:maxLines="2"
                    android:text="@string/selectContactToSend"
                    android:textSize="10sp" >
                </EditText>

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="#c0c0c0" />

                <EditText
                    android:id="@+id/textSelectThePathToSave"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:hint="@string/selectPathToSave"
                    android:maxLines="2"
                    android:text="@string/selectPathToSave"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/buttonSelectThePathToSave"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:maxLines="2"
                    android:text="@string/selectPathToSave"
                    android:textSize="10sp" />
            </TableRow>
        </LinearLayout>
    </ScrollView>    

</TableLayout>